--- a/index.html
+++ b/index.html
@@ -20,8 +20,10 @@
 </head>
 
 <body>
-  <polaris-chip></polaris-chip>
-  <polaris-chip title="Cool stuff"></polaris-chip>
+  <polaris-chip name="Research" active ></polaris-chip>
+  <polaris-chip name="Earth and Mineral Sciences"></polaris-chip>
+  <polaris-chip name="Latest News" link = " https://psu.edu/" ></polaris-chip>
+  <polaris-chip name="Graduate School"></polaris-chip>
 
   <script type="module" src="./src/polaris-chip.js"></script>
 </body>
