Revert "inclass- work"
This reverts commit 38f2e5d484bc6db55a4e2b5f00c5d2d4463346d2.

--- a/index.html
+++ b/index.html
@@ -15,23 +15,16 @@
       font-family: sans-serif;
       background-color: #ededed;
     }
-
   </style>
   <title>polaris-chip</title>
 </head>
 
 <body>
-  <div style="background-color:#fff">
-  <polaris-chip name="primaryOutlined >" class="primaryOutlined"></polaris-chip>
-  <polaris-chip name="primaryFilled" class="primaryFilled"></polaris-chip>
-</div>
-<div style="background-color:#E8E8E8">
-  <polaris-chip name="tinted" class="tinted"></polaris-chip>
-</div>
-    <div style="background-color:#1e407c">
-      <polaris-chip name="lightOutlined" class="lightOutlined"></polaris-chip>
-      <polaris-chip name="lightFilled" class="lightFilled"></polaris-chip>
-    </div>
+  <polaris-chip name="Research" active></polaris-chip>
+  <polaris-chip name="Earth and mineral sciences" link="https://psu.edu/"></polaris-chip>
+  <polaris-chip name="Latest News" link="https://psu.edu/"></polaris-chip>
+  <polaris-chip link="https://psu.edu/">Graduate school</polaris-chip>
+
   <script type="module" src="./src/polaris-chip.js"></script>
 </body>
 
